Fixed query grid column filter text overflow issue

--- a/src/WebComponents/QueryGrid/query-grid-column-filter.scss
+++ b/src/WebComponents/QueryGrid/query-grid-column-filter.scss
@@ -50,6 +50,10 @@
         width: 100%;
         height: var(--theme-h2);
         padding: 0;
+
+        span {
+            overflow: hidden;
+        }
     }
 
     #label {
@@ -74,7 +78,7 @@
 
     &[filtered] {
         #label {
-            display: inline-block;
+            display: block;
         }
 
         vi-icon[source="Filter"] {
